--- a/lab/views/one-celeb.hbs
+++ b/lab/views/one-celeb.hbs
@@ -8,5 +8,8 @@
     <h3>
     {{celeb.catchphrase}}
     </h3>
+    <form action="/celebs/{{celeb.id}}/edit" method="GET">
+      <button class="button">Edit</button>
+    </form>
   </div>
 </div>
