--- a/lab/views/layout.hbs
+++ b/lab/views/layout.hbs
@@ -25,6 +25,20 @@
     <a href="/allcelebs">
       See celebs
     </a>
+    <a href="/signup">
+      Signup
+    </a>
+    {{#if user}}
+      <form action="/logout" method="POST">
+        <button>Logout</button>
+      </form>
+    {{else}}
+      <a href="/login">
+        Log in
+      </a>
+    {{/if}}
+    
+
   </div>
 
   {{{body}}}
